--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,41 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #5d6d7e;
+    --foreground: #171717;
   }
+  
+  @media (prefers-color-scheme: dark) {
+    :root {
+      /* --background: #0a0a0a; */
+      /* --foreground: #ededed; */
+      --background: #5d6d7e;
+      --foreground: #171717;
+    }
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh; /* Agregado para ocupar toda la altura */
+  }
+  
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@layer components { 
+    .custom-section { 
+        @apply py-6 px-5 rounded-t-3xl shadow-lg bg-white border border-gray-100 
+        grid gap-6 transition-all duration-200 hover:shadow-xl
+        w-[430px] h-[932px] max-w-[430px] max-h-[932px] overflow-hidden
+    } 
 }
