--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,6 @@
   
   @media (prefers-color-scheme: dark) {
     :root {
-      /* --background: #0a0a0a; */
-      /* --foreground: #ededed; */
       --background: #5d6d7e;
       --foreground: #171717;
     }
@@ -20,7 +18,7 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh; /* Agregado para ocupar toda la altura */
+    height: 100vh;
   }
   
 body {
@@ -32,10 +30,9 @@ body {
   justify-content: center;
 }
 
-@layer components { 
-    .custom-section { 
-        @apply py-6 px-5 rounded-t-3xl shadow-lg bg-white border border-gray-100 
-        grid gap-6 transition-all duration-200 hover:shadow-xl
-        w-[430px] h-[932px] max-w-[430px] max-h-[932px] overflow-hidden
-    } 
-}
+@layer components {
+    .title-section {
+      @apply text-[20px] font-bold;
+    }
+  }
+  
